SERVER-86654: Fix $regex $options re-parsing

GitOrigin-RevId: df069458a1bbda532aaa06cc135ee6c408b81701